use angular-csp.css (fix for angular-css on uberspace)

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
+      <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
