--- a/app/index.html
+++ b/app/index.html
@@ -35,11 +35,11 @@
     <div class="top">
         <h1><a href="#">Shownot.es</a></h1>
         <ul class="nav-top">
-            <li><a href="#" class="active">Start</a></li>
-            <li><a href="#">Archiv</a></li>
-            <li><a ng-href="#/about">Über uns</a></li>
-            <li><a href="#">Hilfe</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a ng-href="/" class="active">Start</a></li>
+            <li><a ng-href="/archive">Archiv</a></li>
+            <li><a ng-href="/about">Über uns</a></li>
+            <li><a ng-href="/help">Hilfe</a></li>
+            <li><a ng-href="/news">Blog</a></li>
         </ul>
     </div>
 
