working local login

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -78,6 +79,9 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
     <script src="scripts/controllers/MainController.js"></script>
+
+    <script src="scripts/services/LoginService.js"></script>
+
     <script src="scripts/directives/activeLink.js"></script>
     <script src="scripts/directives/focusOn.js"></script>
     <!-- endbuild -->
