--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
 	<meta name="author" content="Shownot.es Team" />
 	<meta name="description" content="Die kollaborative Plattform zum Crowdsourcing von Sendungsnotizen." />
-	<meta name="keywords" content="podcast, podcasting, shownotes, sendungsnotizen, crowdsourcing, helfer, mithelfen, live, schreiben, etherpad, showpad" />
+	<meta name="keywords" content="shownotes, sendungsnotizen, podcast, podcasting, crowdsourcing, helfer, mithelfen, live, schreiben, sendungen, radio, etherpad, showpad, editor" />
 	<meta name="robots" content="index,follow" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -26,6 +26,17 @@
 	  <link rel="stylesheet" href="styles/main.css">
 	  <link rel="stylesheet" href="styles/icons.css">
 	<!-- endbuild -->
+	<script type="text/javascript">
+	/* <![CDATA[ */
+	(function() {
+		var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+		s.type = 'text/javascript';
+		s.async = true;
+		s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+		t.parentNode.insertBefore(s, t);
+	})();
+	/* ]]> */
+	</script>
   </head>
   <body ng-app="snotes20App">
 	<!--[if lt IE 7]>
@@ -34,12 +45,16 @@
 
 	<div class="top">
 		<ul class="nav-top">
-			<li><h1><a href="/">Shownot.es</a></h1></li>
 			<li>
+				<h1>
+					<a href="/">Shownot.es</a>
+					<span><a href="#" title="{{ 'layout.menu.toggle' | translate }}"><span class="icon-menu"></span></a></span>
+				</h1>
 				<ul>
 					<li><a ng-href="/archive" active-link="active" translate="layout.menu.archive"></a></li>
 					<li><a ng-href="/about" active-link="active" translate="layout.menu.aboutUs"></a></li>
 					<li><a ng-href="/help" active-link="active" translate="layout.menu.help"></a></li>
+					<li><a ng-href="#" active-link="active" translate="layout.menu.contact"></a></li>
 				</ul>
 			</li>
 		</ul>
@@ -58,7 +73,7 @@
 		<p class="left">
 			<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://shownot.es/"></a>
 			<a href="https://twitter.com/DieShownotes" class="twitter-follow-button" data-show-count="false" data-lang="de">Auf Twitter folgen</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-			<a href='https://alpha.app.net/shownotes' class='adn-button' target='_blank' data-type='follow' data-width='295' data-height='20' data-user-id='@shownotes' data-show-username='1' rel='me'>Auf App.net folgen</a><script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//d2zh9g63fcvyrq.cloudfront.net/adn.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'adn-button-js'));</script>
+			<a href='https://alpha.app.net/shownotes' class='adn-button' target='_blank' data-type='follow' data-width='185' data-height='20' data-user-id='@shownotes' data-show-username='1' rel='me'>Auf App.net folgen</a><script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//d2zh9g63fcvyrq.cloudfront.net/adn.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'adn-button-js'));</script>
 		</p>
 		<p class="right" translate="layout.footer.copyright"></p>
 	</div>
