--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 					<li><a ng-href="/archive" active-link="active" translate="layout.menu.archive"></a></li>
 					<li><a ng-href="/about" active-link="active" translate="layout.menu.aboutUs"></a></li>
 					<li><a ng-href="/help" active-link="active" translate="layout.menu.help"></a></li>
-					<li><a ng-href="#" active-link="active" translate="layout.menu.contact"></a></li>
+					<li><a ng-href="/contact" active-link="active" translate="layout.menu.contact"></a></li>
 				</ul>
 			</li>
 		</ul>
