split login-form into 3 (login, register, forgotpw)

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
 	<!-- endbuild -->
 	<!-- build:css({.tmp,app}) styles/main.css -->
 	  <link rel="stylesheet" href="styles/main.css">
+	  <link rel="stylesheet" href="styles/sidebar.css">
 	  <link rel="stylesheet" href="styles/icons.css">
 	<!-- endbuild -->
 	<script type="text/javascript">
