fix forms and sidebar, add new navs and content

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
 		<p class="left">
 			<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://shownot.es/"></a>
 			<a href="https://twitter.com/DieShownotes" class="twitter-follow-button" data-show-count="false" data-lang="de">Auf Twitter folgen</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-			<a href='https://alpha.app.net/shownotes' class='adn-button' target='_blank' data-type='follow' data-width='185' data-height='20' data-user-id='@shownotes' data-show-username='1' rel='me'>Auf App.net folgen</a><script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//d2zh9g63fcvyrq.cloudfront.net/adn.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'adn-button-js'));</script>
+			<a href="https://alpha.app.net/shownotes" class="adn-button" target="_blank" data-type="follow" data-width="185" data-height="20" data-user-id="@shownotes" data-show-username="1" rel="me">Auf App.net folgen</a><script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//d2zh9g63fcvyrq.cloudfront.net/adn.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'adn-button-js'));</script>
 		</p>
 		<p class="right" translate="layout.footer.copyright"></p>
 	</div>
