--- a/app/index.html
+++ b/app/index.html
@@ -58,14 +58,37 @@
             <input type="checkbox" id="toggle-form" ng-model="loginform.isDown" />
             <form>
               <div class="input">
-                <input type="text" placeholder="Benutzername" value="" title="Gib deinen Benutzernamen ein" required />
-                <input type="text" placeholder="E-Mail-Adresse" value="" title="Gib deine E-Mail-Adresse" required />
-                <input type="password" placeholder="Passwort" value="" title="Gib dein Passwort ein" required />
-                <input type="password" placeholder="Passwort (Wdh.)" value="" title="Wiederhole dein Passwort" required />
+                <input type="text"
+                       ng-model="user.username"
+                       placeholder="Benutzername"
+                       value=""
+                       title="Gib deinen Benutzernamen ein"
+                       required />
+                <input type="text"
+                       ng-model="user.email"
+                       ng-show="loginform.mode == 'register'"
+                       placeholder="E-Mail-Adresse"
+                       value=""
+                       title="Gib deine E-Mail-Adresse"
+                       required />
+                <input type="password"
+                       ng-model="user.password"
+                       placeholder="Passwort"
+                       value=""
+                       title="Gib dein Passwort ein"
+                       required />
+                <input type="password"
+                       ng-model="user.password2"
+                       ng-show="loginform.mode == 'register'"
+                       placeholder="Passwort (Wdh.)"
+                       equals="{{user.password}}"
+                       value=""
+                       title="Wiederhole dein Passwort"
+                       required />
               </div>
               <div class="button">
-                <input type="submit" value="Einloggen" />
-                <input type="submit" value="Registrieren" />
+                <input type="button" value="Einloggen" ng-click="login()" />
+                <input type="button" value="Registrieren" ng-click="register()" />
               </div>
             </form>
           </li>
@@ -116,7 +139,10 @@
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
+
   <script src="scripts/controllers/sidebar.js"></script>
+  <script src="scripts/services/authentication.js"></script>
+  <script src="scripts/directives/equals.js"></script>
   <!-- endbuild -->
 
 </body>
