directly include flattr javascript

--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<!-- endbuild -->
 
-	<script type="text/javascript">
-	/* <![CDATA[ */
-	(function() {
-		var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
-		s.type = 'text/javascript';
-		s.async = true;
-		s.src = '//api.flattr.com/js/0.6/load.js?mode=auto';
-		t.parentNode.insertBefore(s, t);
-	})();
-	/* ]]> */
-	</script>
+	<script type="text/javascript" src="//api.flattr.com/js/0.6/load.js?mode=auto" async></script>
 
 </head>
 
