--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,8 @@
 	<script src="scripts/controllers/sidebar.js"></script>
 	<script src="scripts/services/authentication.js"></script>
 	<script src="scripts/directives/equals.js"></script>
+
+	<script src="scripts/controllers/profile.js"></script>
 	<!-- endbuild -->
 
 </body>
