--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 							<span class="arrow" ng-class="{true: 'icon-arrow-up', false: 'icon-arrow-down'}[loginform.status === 'down']" ng-show="loginform.status === 'down'"></span>
 							<span class="icon-user"></span><span class="caption">Mein Account</span>
 						</label>
-						<input type="checkbox" id="toggle-form" ng-model="login.isDown" />
+						<input type="checkbox" id="toggle-form" ng-model="loginform.status" ng-true-value="down" ng-false-value="up"  />
 						<form name="loginform.frm" novalidate>
 							<div class="form-input">
 								<input type="text"
