consistent inputs, less borders

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Shownot.es</title>
+	<title>shownot.es</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
@@ -33,7 +33,7 @@
 		<section class="sidebar" ng-controller="SidebarController">
 
 			<header>
-				<h1><a href="#">Shownot.es</a></h1>
+				<h1><a href="#">shownot.es</a></h1>
 			</header>
 
 			<p>Die kollaborative Plattform für Sendungsnotizen. <a href="#">Was ist das?</a></p>
