--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 											 value=""
 											 title="Gib deinen Benutzernamen ein"
 											 required />
-								<input type="text"
+								<input type="email"
 											 ng-model="user.email"
 											 ng-show="loginform.mode == 'register'"
 											 ng-required="loginform.mode == 'register'"
@@ -71,7 +71,7 @@
 											 ng-model="user.password2"
 											 ng-show="loginform.mode == 'register'"
 											 ng-required="loginform.mode == 'register'"
-											 placeholder="Passwort (Wdh.)"
+											 placeholder="Passwort wiederholen"
 											 equals="{{user.password}}"
 											 value=""
 											 title="Wiederhole dein Passwort" />
@@ -106,7 +106,7 @@
 			</nav>
 
 			<footer>
-				<p>Alle Inhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license">CC0-Lizenz</a>.</p>
+				<p>Alle Inhalte stehen, soweit nicht anders vermerkt, unter der <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de" rel="license" title="CC0 1.0 Universell (Public Domain Dedication)">CC0-Lizenz</a>.</p>
 				<!-- <p>shownot.es wird betrieben und weiterentwickelt vom Shownotes e.V.</p> -->
 				<!-- <nav>
 					<ul>
