--- a/app/index.html
+++ b/app/index.html
@@ -161,6 +161,8 @@
 	<script src="scripts/controllers/user/activate.js"></script>
 
 	<script src="scripts/controllers/document.js"></script>
+
+	<script src="scripts/controllers/profile.js"></script>
 	<!-- endbuild -->
 
 </body>
