--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 											 id="checkrules"
 											 value="checkrules"
 											 required />
-								<label for="checkrules">Ich akzeptiere die <a href="#">Regeln</a>.</label>
+								<label for="checkrules">Ich akzeptiere die <a href="/rules">Regeln</a>.</label>
 							</div>
 							<div class="form-button">
 								<input type="{{loginform.mode === 'register' ? 'button' : 'submit'}}" value="Einloggen" ng-click="login()" />
