pwreset (set new pw page)

--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,8 @@
 
 	<script src="scripts/controllers/user/activate.js"></script>
 
+	<script src="scripts/controllers/user/pwreset.js"></script>
+
 	<script src="scripts/controllers/document.js"></script>
 
 	<script src="scripts/controllers/profile.js"></script>
