--- a/app/index.html
+++ b/app/index.html
@@ -46,10 +46,10 @@
 							<span class="arrow" ng-class="{true: 'icon-arrow-up', false: 'icon-arrow-down'}[loginform.status === 'down']" ng-show="loginform.status === 'down'"></span>
 							<span class="icon-user"></span><span class="caption">Mein Account</span>
 						</label>
-						<input type="checkbox" id="toggle-form" ng-model="loginform.status" ng-true-value="down" ng-false-value="up"  />
+						<input type="checkbox" id="toggle-form" ng-model="loginform.status" ng-true-value="down" ng-false-value="up" />
 						<form name="loginform.frm" novalidate>
 							<div class="form-input">
-								<div ng-show="loginform.errors.loginfailed">Das hat nicht geklappt.</div>
+								<div ng-show="loginform.errors.loginfailed">Hast du dein <a href="#">Passwort vergessen</a>?</div>
 								<form-error errors="loginform.errors.username"></form-error>
 								<input type="text"
 											 ng-model="user.username"
@@ -98,15 +98,45 @@
 			</nav>
 
 			<nav class="account" ng-show="currentUser">
-				<input type="button" value="Ausloggen" ng-click="logout()" />
+				<ul>
+					<li>
+						<label class="toggle" for="toggle-form">
+							<span class="arrow" ng-class="{true: 'icon-arrow-up', false: 'icon-arrow-down'}[userform.status === 'down']" ng-show="userform.status === 'down'"></span>
+							<span class="icon-user"></span><span class="caption">{{currentUser.username}}</span>
+						</label>
+						<input type="checkbox" id="toggle-form" ng-model="userform.status" ng-true-value="down" ng-false-value="up" />
+						<form name="loginform.frm" novalidate>
+							<div class="form-button">
+								<a href="/user/profile">Profil</a>
+								<input type="button" value="Ausloggen" ng-click="logout()" />
+							</div>
+						</form>
+					</li>
+				</ul>
 			</nav>
 
 			<nav class="menu">
 				<ul>
-					<li title="Administration"><a href="#"><span class="icon-settings"></span><span class="caption">Administration</span></a></li>
-					<li title="Sendungen"><a href="#"><span class="icon-podcast"></span><span class="caption">Sendungen</span></a></li>
-					<li title="Häufig gestellte Fragen"><a href="#"><span class="icon-info"></span><span class="caption">Häufig gestellte Fragen</span></a></li>
-					<li title="Community"><a href="#"><span class="icon-bubbles"></span><span class="caption">Community</span></a></li>
+					<li title="Administration">
+						<a href="#">
+							<span class="icon-settings"></span><span class="caption">Administration</span>
+						</a>
+					</li>
+					<li title="Sendungen">
+						<a href="#">
+							<span class="icon-podcast"></span><span class="caption">Sendungen</span>
+						</a>
+					</li>
+					<li title="Häufig gestellte Fragen">
+						<a href="#">
+							<span class="icon-info"></span><span class="caption">Häufig gestellte Fragennnnnn</span>
+						</a>
+					</li>
+					<li title="Community">
+						<a href="#">
+							<span class="icon-bubbles"></span><span class="caption">Community</span>
+						</a>
+					</li>
 				</ul>
 			</nav>
 
