--- a/app/index.html
+++ b/app/index.html
@@ -39,15 +39,18 @@
 
 			<p>Die kollaborative Plattform für Sendungsnotizen. <a href="#">Was ist das?</a></p>
 
-			<nav class="account" ng-show="!currentUser">
+			<nav class="account">
 				<ul>
 					<li>
 						<label class="toggle" for="toggle-form">
 							<span class="arrow" ng-class="{true: 'icon-arrow-up', false: 'icon-arrow-down'}[loginform.status === 'down']" ng-show="loginform.status === 'down'"></span>
-							<span class="icon-user"></span><span class="caption">Mein Account</span>
+							<span class="icon-user"></span>
+							<span class="caption" ng-show="!currentUser">Mein Account</span>
+							<span class="caption" ng-show="currentUser">{{currentUser.username}}</span>
 						</label>
 						<input type="checkbox" id="toggle-form" ng-model="loginform.status" ng-true-value="down" ng-false-value="up" />
-						<form name="loginform.frm" novalidate>
+
+						<form name="loginform.frm" ng-show="!currentUser && loginform.status === 'down'" novalidate>
 							<div class="form-input">
 								<div ng-show="loginform.errors.loginfailed">Hast du dein <a href="#">Passwort vergessen</a>?</div>
 								<form-error errors="loginform.errors.username"></form-error>
@@ -93,19 +96,8 @@
 								<input type="{{loginform.mode === 'login' ? 'button' : 'submit'}}" value="Registrieren" ng-click="register()" />
 							</div>
 						</form>
-					</li>
-				</ul>
-			</nav>
 
-			<nav class="account" ng-show="currentUser">
-				<ul>
-					<li>
-						<label class="toggle" for="toggle-form">
-							<span class="arrow" ng-class="{true: 'icon-arrow-up', false: 'icon-arrow-down'}[userform.status === 'down']" ng-show="userform.status === 'down'"></span>
-							<span class="icon-user"></span><span class="caption">{{currentUser.username}}</span>
-						</label>
-						<input type="checkbox" id="toggle-form" ng-model="userform.status" ng-true-value="down" ng-false-value="up" />
-						<form name="loginform.frm" novalidate>
+						<form ng-show="currentUser && loginform.status === 'down'">
 							<div class="form-button">
 								<a href="/user/profile">Profil</a>
 								<input type="button" value="Ausloggen" ng-click="logout()" />
