--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,8 @@
 
 						<form name="loginform.frm" ng-show="!currentUser && loginform.status === 'down'" novalidate>
 							<div class="form-input">
-								<div ng-show="loginform.errors.loginfailed">Hast du dein <a href="#">Passwort vergessen</a>?</div>
+								<div ng-show="loginform.errors.loginfailed">Hast du dein <a href="#" ng-click="requestPwReset()">Passwort vergessen</a>?</div>
+								<div ng-show="pwresetdone">Überprüfe dein Mail-Postfach.</div>
 								<form-error errors="loginform.errors.username"></form-error>
 								<input type="text"
 											 ng-model="user.username"
