proper feedback in profile and pw reset

--- a/app/index.html
+++ b/app/index.html
@@ -182,6 +182,8 @@
 	<script src="scripts/directives/formerror.js"></script>
 
 	<script src="scripts/controllers/user/profile.js"></script>
+	<script src="scripts/directives/actionstatus.js"></script>
+	<script src="scripts/services/actionStatusGlue.js"></script>
 
 	<script src="scripts/controllers/user/upgrade.js"></script>
 
